--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ core-foundation-sys = "0.8.6"
 env_logger = "0.11.3"
 log = "0.4.21"
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
+security-framework = "2.10.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_yaml = "0.9.33"
 tokio = { version = "1.36.0", features = ["full"] }
+whoami = "1.5.1"
