--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,10 @@ core-foundation-sys = "0.8.6"
 env_logger = "0.11.3"
 log = "0.4.21"
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
+reqwest = { version = "0.12.4", features = ["blocking"] }
 security-framework = "2.10.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_yaml = "0.9.33"
+signal-hook = "0.3.17"
 tokio = { version = "1.36.0", features = ["full"] }
 whoami = "1.5.1"
